--- a/main.html
+++ b/main.html
@@ -7,7 +7,15 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div class="header">
+	<div class="item" id="one">1</div>
+	<div class="item" id="two">2</div>
+	<div class="item" id="three">3</div>
+	<div class="item" id="four">4</div>
+	</div>
+		
+		
+		<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
 
