--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<div class="header">
+	<div class="holder">
 	<div class="item" id="one">1</div>
 	<div class="item" id="two">2</div>
 	<div class="item" id="three">3</div>
